--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Pizza Order</title>
+    <link rel="icon" type="images/icon.png" href="images/icon.png">
     <link rel="stylesheet" href="./css/mdb.css" type="text/css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet"  type="text/css" href="/css/styles.css">
+    <link rel="stylesheet"  type="text/css" href="css/styles.css">
   </head>
   <body>
     <div class="container">
