--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron ">
+      <div class="jumbotron text-center ">
         <h1>Pizza Order</h1>
 
       </div>
