--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="container">
     <div class="jumbotron text-center ">
       <h1>Pizza Order</h1>
+      <h2>Select your pizza size here!!!</h2>
       <form class="my-5">
         <div class='row'>
 
