added  a new background image and deleted some pics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Pizza Order</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
+  
   <link rel="icon" type="images/icon.png" href="images/icon.png">
   <link rel="stylesheet" type="text/css" href="css/mdb.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -64,6 +65,21 @@
 
 
 
+
+    </div>
+    <div class="container text-center">
+      <h1 id="h">Pizza Toppings</h1>
+      <form class="my-5">
+        <div class="card-deck">
+          <div class="card">
+
+
+
+          </div>
+
+        </div>
+
+      </form>
 
     </div>
 
