added  inputs for meat oppings

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pizza Order</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
-  
+
   <link rel="icon" type="images/icon.png" href="images/icon.png">
   <link rel="stylesheet" type="text/css" href="css/mdb.css" type="text/css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -69,17 +69,48 @@
     </div>
     <div class="container text-center">
       <h1 id="h">Pizza Toppings</h1>
-      <form class="my-5">
-        <div class="card-deck">
-          <div class="card">
-
-
-
-          </div>
-
-        </div>
-
-      </form>
+      <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+                 <h5>MEAT(s)</h5>
+                 <p>1 topping included, $1.00 for each additional meat.</p>
+                 <hr>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value="Pepperoni" id="pepperoni">
+                   <label class="form-check-label" for="pepperoni">
+                     Pepperoni
+                   </label>
+                 </div>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value="Sausage" id="sausage">
+                   <label class="form-check-label" for="sausage">
+                     Sausage
+                   </label>
+                 </div>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value='Canadian Bacon' id="canadianBacon">
+                   <label class="form-check-label" for="canadianBacon">
+                     Canadian Bacon
+                   </label>
+                 </div>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value="Ground Beef" id="groundBeef">
+                   <label class="form-check-label" for="groundBeef">
+                     Ground Beef
+                   </label>
+                 </div>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value="Anchovy" id="anchovy">
+                   <label class="form-check-label" for="anchovy">
+                     Anchovy
+                   </label>
+                 </div>
+                 <div class="form-check">
+                   <input class="form-check-input meat" type="checkbox" value="Chicken" id="chicken">
+                   <label class="form-check-label" for="chicken">
+                     Chicken
+                   </label>
+                 </div>
+               </div>
+               <!------------------/MEATS----------------->
 
     </div>
 
