--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron text-center ">
-      <h1>Pizza Order</h1>
-      <h2>Select your pizza size here!!!</h2>
-      <form class="my-5">
-        <div class='row'>
+    <div class="jumbotron text-center">
+
+    <h1>Jumanji's Pizza</h1>
+    <h2>Select and Order your pizza size here!!</h2>
+
+
+  <div class='row'>
 
           <!--PERSONAL-->
           <div class="col-3 text-center">
@@ -44,7 +46,7 @@
             </div>
           </div>
           <!--/MEDIUM-->
-<br><br>
+
           <!--LARGE-->
           <div class="col-3 text-center">
             <div class="custom-control custom-radio">
@@ -57,64 +59,334 @@
           </div>
           <!--/LARGE-->
 
+          <!--X LARGE-->
+          <div class="col-3 text-center">
+            <div class="custom-control custom-radio">
+              <input class="custom-control-input" type="radio" name="selectSize" id="xlarge" value="X-Large">
+              <label class="custom-control-label" for="xlarge">
+                <img id='xlargePic' class='img-fluid' src='images/pizza2.png' alt='xlarge size pizza, $16.00'>
+                <div>X-Large ($16.00)</div>
+              </label>
+            </div>
+          </div>
+          <!--/X LARGE-->
+        </div>
+        <!---------/PIZZA SIZE---------->
+      </div>
+
+        <!--CUSTOMIZE-->
+        <div class='row justify-content-center my-5 color-black'>
+
+          <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+            <h5>MEAT(s)</h5>
+            <p>1 topping included, $1.00 for each additional meat.</p>
+            <hr>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value="Pepperoni" id="pepperoni">
+              <label class="form-check-label" for="pepperoni">
+                Pepperoni
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value="Sausage" id="sausage">
+              <label class="form-check-label" for="sausage">
+                Sausage
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value='Canadian Bacon' id="canadianBacon">
+              <label class="form-check-label" for="canadianBacon">
+                Canadian Bacon
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value="Ground Beef" id="groundBeef">
+              <label class="form-check-label" for="groundBeef">
+                Ground Beef
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value="Anchovy" id="anchovy">
+              <label class="form-check-label" for="anchovy">
+                Anchovy
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input meat" type="checkbox" value="Chicken" id="chicken">
+              <label class="form-check-label" for="chicken">
+                Chicken
+              </label>
+            </div>
+          </div>
+          <!------------------/MEATS----------------->
+
+          <!--------------------VEGGIES-----------------
+          Check boxes for multiple selection of veggies:
+          Tomatoes, Onions, Olives, Green Peppers, Mushrooms,
+          Pineapple, Spinach, and Jalapeno
+          --------------------------------------------->
+          <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+            <h5>VEGGIE(s)</h5>
+            <p>1 topping included, $1.00 for each additional veggie.</p>
+            <hr>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Tomatoes" id="tomatoes">
+              <label class="form-check-label" for="tomatoes">
+                Tomatoes
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Onions" id="onions">
+              <label class="form-check-label" for="onions">
+                Onions
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Olives" id="olives">
+              <label class="form-check-label" for="olives">
+                Olives
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Green Peppers" id="greenPeppers">
+              <label class="form-check-label" for="greenPeppers">
+                Green Peppers
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Mushrooms" id="mushrooms">
+              <label class="form-check-label" for="mushrooms">
+                Mushrooms
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Pineapple" id="pineapple">
+              <label class="form-check-label" for="pineapple">
+                Pineapple
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Spinach" id="spinach">
+              <label class="form-check-label" for="spinach">
+                Spinach
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input veggie" type="checkbox" value="Jalapeno" id="jalapeno">
+              <label class="form-check-label" for="jalapeno">
+                Jalapeno
+              </label>
+            </div>
+          </div>
+          <!------------------/VEGGIES-------------->
+
+          <!-----------------CHEESE------------------
+          Radio buttons for a cheese selection:
+          Regular, No cheese, Extra Cheese
+          ------------------------------------------>
+          <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+            <h5>CHEESE</h5>
+            <p>Select from choices below.</p>
+            <hr>
+            <div class="form-check">
+              <input class="form-check-input" name='cheeseRadio' type="radio" value="Regular Cheese" id="regularCheese" checked>
+              <label class="form-check-label" for="regularCheese">
+                Regular Cheese
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='cheeseRadio' type="radio" value="No Cheese" id="noCheese">
+              <label class="form-check-label" for="noCheese">
+                No Cheese
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='cheeseRadio' type="radio" value="Extra Cheese" id="extraCheese">
+              <label class="form-check-label" for="extraCheese">
+                Extra Cheese ($3)
+              </label>
+            </div>
+          </div>
+          <!------------------/CHEESE--------------->
+
+          <!------------------CRUST------------------
+          Radio buttons for a crust selection:
+          Plain Crust, Garlic Butter Crust, Cheese Stuffed Crust,
+          Spicy Crust, and House Special Crust
+          ------------------------------------------->
+          <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+            <h5>CRUST</h5>
+            <p>Select from choices below.</p>
+            <hr>
+            <div class="form-check">
+              <input class="form-check-input" name='crustRadio' type="radio" value="Plain Crust" id="plainCrust" checked>
+              <label class="form-check-label" for="plainCrust">
+                Plain Crust
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='crustRadio' type="radio" value="Garlic Butter Crust" id="garlicCrust">
+              <label class="form-check-label" for="garlicCrust">
+                Garlic Butter Crust
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='crustRadio' type="radio" value="Cheese Stuffed Crust" id="cheeseCrust">
+              <label class="form-check-label" for="cheeseCrust">
+                Cheese Stuffed Crust ($3)
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='crustRadio' type="radio" value="Spicy Crust" id="spicyCrust">
+              <label class="form-check-label" for="spicyCrust">
+                Spicy Crust
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='crustRadio' type="radio" value="House Special Crust" id="houseCrust">
+              <label class="form-check-label" for="houseCrust">
+                House Special Crust
+              </label>
+            </div>
+          </div>
+          <!----------------/CRUST------------>
+
+          <!---------------SAUCE----------------
+          Radio buttons for a sauce selection:
+          Marinara sauce, White sauce, Barbeque sauce, and No Sauce
+          ------------------------------------->
+          <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
+            <h5>SAUCE</h5>
+            <p>Select from choices below.</p>
+            <hr>
+            <div class="form-check">
+              <input class="form-check-input" name='sauceRadio' type="radio" value="Marinara" id="marinara" checked>
+              <label class="form-check-label" for="marinara">
+                Marinara
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='sauceRadio' type="radio" value="White Sauce" id="whiteSauce">
+              <label class="form-check-label" for="whiteSauce">
+                White Sauce
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='sauceRadio' type="radio" value="Barbeque" id="bbqSauce">
+              <label class="form-check-label" for="bbqSauce">
+                Barbeque
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" name='sauceRadio' type="radio" value="No Sauce" id="noSauce">
+              <label class="form-check-label" for="noSauce">
+                No Sauce
+              </label>
+            </div>
+          </div>
+          <!------------------/SAUCE-------------->
 
         </div>
+        <!--/CUSTOMIZE-->
 
+        <!--BUTTONS-->
+        <div class='row'>
+          <div class='col text-center mb-5'>
+            <button class='btn btn-primary' type=submit>Submit Order</button>
+            <button class='btn btn-danger' type="reset">Reset</button>
+          </div>
+        </div>
+        <!--/BUTTONS-->
       </form>
+      <!--/FORM-->
 
-
-
-
-
+      <!------------RECEIPT--------->
+      <div id='receipt' class='row'>
+        <div class='col'>
+          <h3>Order Received!</h3>
+          <p>This is your receipt.</p>
+          <hr>
+          <div class='row'>
+            <div class='col p-3'>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Size:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='sizeSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='sizeCost'></span>
+                </div>
+              </div>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Crust:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='crustSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='crustCost'></span>
+                </div>
+              </div>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Cheese:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='cheeseSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='cheeseCost'></span>
+                </div>
+              </div>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Sauce:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='sauceSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='sauceCost'></span>
+                </div>
+              </div>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Meat:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='meatSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='meatCost'></span>
+                </div>
+              </div>
+              <div class='row receiptRow'>
+                <div class='col-3'>
+                  Veggie:
+                </div>
+                <div class='col-7'>
+                  <span class='ingredients' id='veggieSelection'></span>
+                </div>
+                <div class='col-2 text-right'>
+                  <span class='costs' id='veggieCost'></span>
+                </div>
+              </div>
+              <div class='row' id='total'>
+                <div class='col'>
+                  TOTAL: <span class='costs'>$<span id='totalCost'></span>.00</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!----------/RECEIPT------->
+      <button id='orderAgain' class='btn btn-primary'>Order Again!</button>
     </div>
-    <div class="container text-center">
-      <h1 id="h">Pizza Toppings</h1>
-      <div class='customizeBox col-xl-3 col-lg-4 col-md-5 p-3 m-3'>
-                 <h5>MEAT(s)</h5>
-                 <p>1 topping included, $1.00 for each additional meat.</p>
-                 <hr>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value="Pepperoni" id="pepperoni">
-                   <label class="form-check-label" for="pepperoni">
-                     Pepperoni
-                   </label>
-                 </div>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value="Sausage" id="sausage">
-                   <label class="form-check-label" for="sausage">
-                     Sausage
-                   </label>
-                 </div>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value='Canadian Bacon' id="canadianBacon">
-                   <label class="form-check-label" for="canadianBacon">
-                     Canadian Bacon
-                   </label>
-                 </div>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value="Ground Beef" id="groundBeef">
-                   <label class="form-check-label" for="groundBeef">
-                     Ground Beef
-                   </label>
-                 </div>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value="Anchovy" id="anchovy">
-                   <label class="form-check-label" for="anchovy">
-                     Anchovy
-                   </label>
-                 </div>
-                 <div class="form-check">
-                   <input class="form-check-input meat" type="checkbox" value="Chicken" id="chicken">
-                   <label class="form-check-label" for="chicken">
-                     Chicken
-                   </label>
-                 </div>
-               </div>
-               <!------------------/MEATS----------------->
-
-    </div>
-
-  </div>
+    <!--/ENTIRE CONTAINER-->
 
 </body>
 
